rtHeap::try_discover